--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h1><b><u>STOPWATCH</u></b></h1><br>
 
       <div class="circle">
-        <span class="time" id="display">00:00:00</span>
+        <span class="time" id="display"><b>00:00:00</b></span>
       </div>
 
       <div class="controls">
